hw2/PA3/cool.output
Terminals unused in grammar

   ERROR


Rules useless in parser due to conflicts

   16 attribute: error ';'


State 10 conflicts: 2 shift/reduce
State 18 conflicts: 2 shift/reduce
State 19 conflicts: 3 reduce/reduce
State 58 conflicts: 10 reduce/reduce
State 63 conflicts: 10 reduce/reduce
State 72 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce, 2 reduce/reduce
State 112 conflicts: 10 reduce/reduce
State 116 conflicts: 10 reduce/reduce
State 141 conflicts: 10 reduce/reduce
State 143 conflicts: 9 shift/reduce
State 155 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error

    7 feature_list: %empty
    8             | feature
    9             | feature_list feature

   10 feature: method
   11        | attribute

   12 method: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   13       | error ';'

   14 attribute: OBJECTID ':' TYPEID ';'
   15          | OBJECTID ':' TYPEID ASSIGN expression ';'
   16          | error ';'

   17 formal_list: %empty
   18            | formal
   19            | formal_list ',' formal

   20 formal: OBJECTID ':' TYPEID

   21 expression_list: expression
   22                | expression_list ',' expression
   23                | error ','
   24                | error

   25 expression: OBJECTID ASSIGN expression
   26           | dispatch_expression
   27           | IF expression THEN expression ELSE expression FI
   28           | IF error
   29           | IF expression THEN error
   30           | IF expression THEN expression ELSE error
   31           | WHILE expression LOOP expression POOL
   32           | WHILE error
   33           | WHILE expression LOOP error
   34           | '{' block_expression '}'
   35           | LET let_expression
   36           | CASE expression OF case_list ESAC
   37           | NEW TYPEID
   38           | ISVOID expression
   39           | expression '+' expression
   40           | expression '-' expression
   41           | expression '*' expression
   42           | expression '/' expression
   43           | '~' expression
   44           | expression '<' expression
   45           | expression LE expression
   46           | expression '=' expression
   47           | NOT expression
   48           | '(' expression ')'
   49           | OBJECTID
   50           | INT_CONST
   51           | STR_CONST
   52           | BOOL_CONST
   53           | error

   54 dispatch_expression: expression '.' OBJECTID '(' ')'
   55                    | expression '.' OBJECTID '(' expression_list ')'
   56                    | OBJECTID '(' ')'
   57                    | OBJECTID '(' expression_list ')'
   58                    | expression '@' TYPEID '.' OBJECTID '(' ')'
   59                    | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'

   60 block_expression: expression ';'
   61                 | block_expression expression ';'
   62                 | error ';'

   63 let_expression: OBJECTID ':' TYPEID IN expression
   64               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   65               | OBJECTID ':' TYPEID ',' let_expression
   66               | OBJECTID ':' TYPEID ASSIGN expression ',' let_expression
   67               | error ',' let_expression

   68 case_list: case
   69          | case_list case

   70 case: OBJECTID ':' TYPEID DARROW expression ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 48 54 55 56 57 58 59
')' (41) 12 48 54 55 56 57 58 59
'*' (42) 41
'+' (43) 39
',' (44) 19 22 23 65 66 67
'-' (45) 40
'.' (46) 54 55 58 59
'/' (47) 42
':' (58) 12 14 15 20 63 64 65 66 70
';' (59) 4 5 12 13 14 15 16 60 61 62 70
'<' (60) 44
'=' (61) 46
'@' (64) 58 59
'{' (123) 4 5 12 34
'}' (125) 4 5 12 34
'~' (126) 43
error (256) 6 13 16 23 24 28 29 30 32 33 53 62 67
CLASS (258) 4 5
ELSE (259) 27 30
FI (260) 27
IF (261) 27 28 29 30
IN (262) 63 64
INHERITS (263) 5
LET (264) 35
LOOP (265) 31 33
POOL (266) 31
THEN (267) 27 29 30
WHILE (268) 31 32 33
CASE (269) 36
ESAC (270) 36
OF (271) 36
DARROW (272) 70
NEW (273) 37
ISVOID (274) 38
STR_CONST (275) 51
INT_CONST (276) 50
BOOL_CONST (277) 52
TYPEID (278) 4 5 12 14 15 20 37 58 59 63 64 65 66 70
OBJECTID (279) 12 14 15 20 25 49 54 55 56 57 58 59 63 64 65 66 70
ASSIGN (280) 15 25 64 66
NOT (281) 47
LE (282) 45
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8 9, on right: 4 5 9
feature (50)
    on left: 10 11, on right: 8 9
method (51)
    on left: 12 13, on right: 10
attribute (52)
    on left: 14 15 16, on right: 11
formal_list (53)
    on left: 17 18 19, on right: 12 19
formal (54)
    on left: 20, on right: 18 19
expression_list (55)
    on left: 21 22 23 24, on right: 22 55 57 59
expression (56)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
    43 44 45 46 47 48 49 50 51 52 53, on right: 12 15 21 22 25 27 29
    30 31 33 36 38 39 40 41 42 43 44 45 46 47 48 54 55 58 59 60 61
    63 64 66 70
dispatch_expression (57)
    on left: 54 55 56 57 58 59, on right: 26
block_expression (58)
    on left: 60 61 62, on right: 34 61
let_expression (59)
    on left: 63 64 65 66 67, on right: 35 65 66 67
case_list (60)
    on left: 68 69, on right: 36 69
case (61)
    on left: 70, on right: 68 69


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error .

    $default  reduce using rule 6 (class)


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 6


State 3

    0 $accept: program . $end

    $end  shift, and go to state 7


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 11


State 10

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 14
    feature       go to state 15
    method        go to state 16
    attribute     go to state 17


State 11

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 18


State 12

   13 method: error . ';'
   16 attribute: error . ';'

    ';'  shift, and go to state 19


State 13

   12 method: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   14 attribute: OBJECTID . ':' TYPEID ';'
   15          | OBJECTID . ':' TYPEID ASSIGN expression ';'

    '('  shift, and go to state 20
    ':'  shift, and go to state 21


State 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 22

    feature    go to state 23
    method     go to state 16
    attribute  go to state 17


State 15

    8 feature_list: feature .

    $default  reduce using rule 8 (feature_list)


State 16

   10 feature: method .

    $default  reduce using rule 10 (feature)


State 17

   11 feature: attribute .

    $default  reduce using rule 11 (feature)


State 18

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 24
    feature       go to state 15
    method        go to state 16
    attribute     go to state 17


State 19

   13 method: error ';' .
   16 attribute: error ';' .

    error     reduce using rule 13 (method)
    error     [reduce using rule 16 (attribute)]
    OBJECTID  reduce using rule 13 (method)
    OBJECTID  [reduce using rule 16 (attribute)]
    '}'       reduce using rule 13 (method)
    '}'       [reduce using rule 16 (attribute)]
    $default  reduce using rule 13 (method)


State 20

   12 method: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 17 (formal_list)

    formal_list  go to state 26
    formal       go to state 27


State 21

   14 attribute: OBJECTID ':' . TYPEID ';'
   15          | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 28


State 22

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 29


State 23

    9 feature_list: feature_list feature .

    $default  reduce using rule 9 (feature_list)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 30

    feature    go to state 23
    method     go to state 16
    attribute  go to state 17


State 25

   20 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 31


State 26

   12 method: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   19 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 32
    ','  shift, and go to state 33


State 27

   18 formal_list: formal .

    $default  reduce using rule 18 (formal_list)


State 28

   14 attribute: OBJECTID ':' TYPEID . ';'
   15          | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 34
    ';'     shift, and go to state 35


State 29

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 36


State 31

   20 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 37


State 32

   12 method: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 38


State 33

   19 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 39


State 34

   15 attribute: OBJECTID ':' TYPEID ASSIGN . expression ';'

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression           go to state 55
    dispatch_expression  go to state 56


State 35

   14 attribute: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 14 (attribute)


State 36

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 37

   20 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 20 (formal)


State 38

   12 method: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 57


State 39

   19 formal_list: formal_list ',' formal .

    $default  reduce using rule 19 (formal_list)


State 40

   53 expression: error .

    $default  reduce using rule 53 (expression)


State 41

   27 expression: IF . expression THEN expression ELSE expression FI
   28           | IF . error
   29           | IF . expression THEN error
   30           | IF . expression THEN expression ELSE error

    error       shift, and go to state 58
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression           go to state 59
    dispatch_expression  go to state 56


State 42

   35 expression: LET . let_expression

    error     shift, and go to state 60
    OBJECTID  shift, and go to state 61

    let_expression  go to state 62


State 43

   31 expression: WHILE . expression LOOP expression POOL
   32           | WHILE . error
   33           | WHILE . expression LOOP error

    error       shift, and go to state 63
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression           go to state 64
    dispatch_expression  go to state 56


State 44

   36 expression: CASE . expression OF case_list ESAC

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression           go to state 65
    dispatch_expression  go to state 56


State 45

   37 expression: NEW . TYPEID

    TYPEID  shift, and go to state 66


State 46

   38 expression: ISVOID . expression

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression           go to state 67
    dispatch_expression  go to state 56


State 47

   51 expression: STR_CONST .

    $default  reduce using rule 51 (expression)


State 48

   50 expression: INT_CONST .

    $default  reduce using rule 50 (expression)


State 49

   52 expression: BOOL_CONST .

    $default  reduce using rule 52 (expression)


State 50

   25 expression: OBJECTID . ASSIGN expression
   49           | OBJECTID .
   56 dispatch_expression: OBJECTID . '(' ')'
   57                    | OBJECTID . '(' expression_list ')'

    ASSIGN  shift, and go to state 68
    '('     shift, and go to state 69

    $default  reduce using rule 49 (expression)


State 51

   47 expression: NOT . expression

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression           go to state 70
    dispatch_expression  go to state 56


State 52

   43 expression: '~' . expression

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression           go to state 71
    dispatch_expression  go to state 56


State 53

   34 expression: '{' . block_expression '}'

    error       shift, and go to state 72
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression           go to state 73
    dispatch_expression  go to state 56
    block_expression     go to state 74


State 54

   48 expression: '(' . expression ')'

    error       shift, and go to state 40
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expression           go to state 75
    dispatch_expression  go to state 56


State 55

   15 attribute: OBJECTID ':' TYPEID ASSIGN expression . ';'
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression
   54 dispatch_expression: expression . '.' OBJECTID '(' ')'
   55                    | expression . '.' OBJECTID '(' expression_list ')'
   58                    | expression . '@' TYPEID '.' OBJECTID '(' ')'
   59                    | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'

    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84
    ';'  shift, and go to state 85


State 56

   26 expression: dispatch_expression .

    $default  reduce using rule 26 (expression)


State 57

   12 method: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 86


State 58

   28 expression: IF error .
   53           | error .

    THEN      reduce using rule 28 (expression)
    THEN      [reduce using rule 53 (expression)]
    LE        reduce using rule 28 (expression)
    LE        [reduce using rule 53 (expression)]
    '<'       reduce using rule 28 (expression)
    '<'       [reduce using rule 53 (expression)]
    '='       reduce using rule 28 (expression)
    '='       [reduce using rule 53 (expression)]
    '+'       reduce using rule 28 (expression)
    '+'       [reduce using rule 53 (expression)]
    '-'       reduce using rule 28 (expression)
    '-'       [reduce using rule 53 (expression)]
    '*'       reduce using rule 28 (expression)
    '*'       [reduce using rule 53 (expression)]
    '/'       reduce using rule 28 (expression)
    '/'       [reduce using rule 53 (expression)]
    '@'       reduce using rule 28 (expression)
    '@'       [reduce using rule 53 (expression)]
    '.'       reduce using rule 28 (expression)
    '.'       [reduce using rule 53 (expression)]
    $default  reduce using rule 28 (expression)


State 59

   27 expression: IF expression . THEN expression ELSE expression FI
   29           | IF expression . THEN error
   30           | IF expression . THEN expression ELSE error
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '*' expression
   42           | expression . '/' expression
   44           | expression . '<' expression
   45           | expression . LE expression
   46           | expression . '=' expression
   54 dispatch_expression: expression . '.' OBJECTID '(' ')'
   55                    | expression . '.' OBJECTID '(' expression_list ')'
   58                    | expression . '@' TYPEID '.' OBJECTID '(' ')'
   59                    | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'

    THEN  shift, and go to state 87
    LE    shift, and go to state 76
    '<'   shift, and go to state 77
    '='   shift, and go to state 78
    '+'   shift, and go to state 79
    '-'   shift, and go to state 80
    '*'   shift, and go to state 81
    '/'   shift, and go to state 82
    '@'   shift, and go to state 83
    '.'   shift, and go to state 84


State 60

   67 let_expression: error . ',' let_expression

    ','  shift, and go to state 88


State 61

   63 let_expression: OBJECTID . ':' TYPEID IN expression
   64               | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   65               | OBJECTID . ':' TYPEID ',' let_expression
   66               | OBJECTID . ':' TYPEID ASSIGN expression ',' let_expression

    ':'  shift, and go to state 89


State 62

   35 expression: LET let_expression .

    $default  reduce using rule 35 (expression)


State 63

   32 expression: WHILE error .
   53           | error .
